@@ -19,16 +19,19 @@
       jg.setColor("#FFFFFF");
 
       getMyPicCoords();
-      /* Update map coords */
-      for(i=0; i< map.length; ++i) {
-          for (j=0; j< map[i]['x_coords'].length; ++j) {
-              map[i]['x_coords'][j] = map[i]['x_coords'][j] + minX;
-              map[i]['y_coords'][j] = map[i]['y_coords'][j] + minY;
+
+      if(typeof map != "undefined") {
+          /* Update map coords */
+          for(i=0; i< map.length; ++i) {
+              for (j=0; j< map[i]['x_coords'].length; ++j) {
+                  map[i]['x_coords'][j] = map[i]['x_coords'][j] + minX;
+                  map[i]['y_coords'][j] = map[i]['y_coords'][j] + minY;
+              }
           }
       }
   }
 
-    
+
   // find out if ie runs in quirks mode
   var docEl = (typeof document.compatMode != "undefined" && document.compatMode != "BackCompat")? "documentElement" : "body";
 
@@ -73,7 +76,7 @@
       // for the dino pass event
       if (document.layers) routeEvent(e);
   }
-  
+
   function dpl_mouse_click(e) {
       getMyPicCoords();
       // position where mousemove fired
@@ -118,7 +121,7 @@
 
   function getMyPicCoords() {
       element = document.getElementById('myPic');
-    
+
       width   = element.width;
       height  = element.height;
 
@@ -130,7 +133,7 @@
       }
   };
 
-    
+
   function resetAndClear() {
       jg.clear();
       xVals = new Array();
@@ -140,7 +143,7 @@
       document.areas.xvals.value    =  xVals;
       document.areas.yvals.value    =  yVals;
   }
-  
+
   function updatePictureAndArea () {
       el = document.getElementById('imageareas');
       areaurl = document.getElementById('areaurl');
