@@ -813,5 +813,5 @@ input:focus, textarea:focus, select:focus {
 }
 
 .g-siriux a:hover img{
-    border: 2px solid #fff;
+    border: 2px solid #4000C0;
 }
