@@ -8,5 +8,5 @@
 $name = _("Jenskin");
 $description = _("A Skin made by Jens. It looks like the config wizard in 1.5.x");
 $version = '2.0.0';
-$last_update = '2006-07-28';
+$last_update = '2006-08-02';
 ?>
