@@ -461,7 +461,7 @@ if ($fitToWindow && (eregi('safari|opera', $_SERVER['HTTP_USER_AGENT']) || $gall
 
 if(empty($full) && $allImageAreas = $gallery->album->getAllImageAreas($index)) {
 	$imageMapHTML = showImageMap($index);
-	$photoTag = $gallery->album->getPhotoTag($index, $full, array('id' => '"galleryImage', 'usemap' => '"#myMap'));
+	$photoTag = $gallery->album->getPhotoTag($index, $full, array('id' => 'galleryImage', 'usemap' => '#myMap'));
 }
 else {
 	$photoTag = $gallery->album->getPhotoTag($index, $full, array('id' => 'galleryImage'));
