@@ -1,3 +1,12 @@
+2006-08-02 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j103-UNSTABLE
+
+ * Fix: JS warning in ImageMap when no ImageMap is available.
+   Thanks to StephaneT from forums.
+
+ * Fix in view_photo.
+
+ * Little CSS changes in jenskin.
+
 2006-07-29 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j102-UNSTABLE
 
  * Fix: HTML ans JS Fixes in slideshow.
